[#2552] Set min-height for sidebar to avoid double scrollbars
When the last filter's (sector) drop-down is active, double sidebars are shown
because `div#filter` is not tall enough. We set a min height for this div.

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -1326,6 +1326,8 @@ h4.detailedInfo {
     }
     div#filter {
         padding: 5px 15px 15px 15px;
+        min-height: 700px;
+        overflow-y: hidden;
         div {
             .btn-group {
                 width: 100%;
